--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -698,5 +698,6 @@
     <color name="color_F5F5F7">#F5F5F7</color>
     <color name="color_80DDFF">#80DDFF</color>
     <color name="color_F8FBFF">#F8FBFF</color>
+    <color name="color_FF3535">#FF3535</color>
 
 </resources>
