--- a/app/src/main/res/layout/dialog_first_deposit_reward.xml
+++ b/app/src/main/res/layout/dialog_first_deposit_reward.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
-    android:orientation="vertical"
-    android:background="@color/transparent_black_50">
+    android:orientation="vertical">
 <FrameLayout
+    android:id="@+id/flRoot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/margin_30"
