--- a/app/src/main/res/layout/item_dailyconfig.xml
+++ b/app/src/main/res/layout/item_dailyconfig.xml
@@ -28,13 +28,13 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="100"
+                android:layout_weight="83"
                 android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tvPercent"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="@dimen/margin_24"
                     android:gravity="center"
                     android:includeFontPadding="false"
@@ -45,7 +45,7 @@
 
                 <TextView
                     android:id="@+id/tvType"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_2"
                     android:lines="2"
@@ -58,7 +58,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="230"
+                android:layout_weight="217"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:paddingHorizontal="@dimen/margin_10">
