增加体育提前结算标识

--- a/app/src/main/res/layout/item_bet_list.xml
+++ b/app/src/main/res/layout/item_bet_list.xml
@@ -144,6 +144,12 @@
 
         </LinearLayout>
 
+        <org.cxct.sportlottery.view.CashOutButton
+            android:id="@+id/cashoutBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginBottom="8dp"/>
 
         <LinearLayout
             android:id="@+id/linearOrderNumber"
