--- a/app/src/main/res/layout/dialog_recharge_promotions.xml
+++ b/app/src/main/res/layout/dialog_recharge_promotions.xml
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/linNoChoose"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="14dp"
+        android:layout_marginVertical="14dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="2"
         tools:listitem="@layout/item_dailyconfig"/>
