--- a/app/src/main/res/layout/item_dailyconfig.xml
+++ b/app/src/main/res/layout/item_dailyconfig.xml
@@ -91,13 +91,13 @@
                     <TextView
                         android:id="@+id/tvRewardTC"
                         android:layout_width="wrap_content"
-                        android:layout_height="@dimen/margin_20"
+                        android:layout_height="wrap_content"
                         android:background="@drawable/bg_red_radius_22"
                         android:gravity="center"
-                        android:paddingHorizontal="@dimen/margin_5"
+                        android:paddingHorizontal="10dp"
                         android:text="@string/terms_conditions_short"
                         android:textColor="@color/color_FFFFFF"
-                        android:textSize="@dimen/textSize12sp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
