--- a/app/src/main/res/layout/dialog_first_deposit_reward.xml
+++ b/app/src/main/res/layout/dialog_first_deposit_reward.xml
@@ -109,6 +109,7 @@
                     android:background="@color/color_E3E8EE"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
