--- a/app/src/main/res/layout/item_quick_money.xml
+++ b/app/src/main/res/layout/item_quick_money.xml
@@ -16,8 +16,9 @@
         tools:text="1000" />
     <TextView
         android:id="@+id/tvTips"
-        android:layout_width="34dp"
+        android:layout_width="wrap_content"
         android:layout_height="23dp"
+        android:minWidth="34dp"
         android:layout_gravity="right"
         android:layout_marginTop="-3dp"
         android:layout_marginRight="2dp"
@@ -26,7 +27,7 @@
         android:paddingHorizontal="@dimen/margin_3"
         android:gravity="center"
         android:background="@drawable/ic_tips_yellow"
-        android:text="10%"
+        tools:text="10%"
         android:textColor="@color/color_FFFFFF"
         android:textSize="@dimen/textSize12sp"/>
 </FrameLayout>
