--- a/app/src/main/res/layout/content_bet_info_item_v3_2.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3_2.xml
@@ -65,6 +65,17 @@
             android:textSize="@dimen/textSize14sp"
             android:textStyle="bold"
             tools:text="-0.5/2" />
+        <androidx.legacy.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/ivCashOut"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/margin_20"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_cashout_yellow"
+            android:adjustViewBounds="true" />
     </LinearLayout>
 
 
