--- a/app/src/main/res/layout/item_match_receipt.xml
+++ b/app/src/main/res/layout/item_match_receipt.xml
@@ -94,7 +94,17 @@
                 android:textColor="@color/color_0D2245"/>
 
 
-
+            <androidx.legacy.widget.Space
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+            <ImageView
+                android:id="@+id/ivCashOut"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/margin_20"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_cashout_yellow"
+                android:adjustViewBounds="true" />
         </LinearLayout>
 
         <TextView
