增加密保问题设置，找回密码，登录

--- a/app/src/main/res/layout/activity_forget_password_question.xml
+++ b/app/src/main/res/layout/activity_forget_password_question.xml
@@ -73,59 +73,6 @@
                 android:paddingBottom="@dimen/margin_20"
                 android:background="@drawable/bg_white_radius_8">
 
-            <org.cxct.sportlottery.view.boundsEditText.LoginFormFieldView
-                android:id="@+id/et_phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                app:hintText="@string/phone_number"
-                app:isResponsiveIconColor="false"
-                app:iconSignifier="@drawable/ic_mobile_gray"
-                app:labelText="@string/mobile"
-                app:labelTextStyle="normal"
-                app:primaryColor="@color/color_AFAFB1">
-
-                <org.cxct.sportlottery.view.boundsEditText.ExtendedEditText
-                    android:id="@+id/eet_phone_num"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:imeOptions="actionNext"
-                    android:inputType="phone"
-                    android:maxLength="11"
-                    android:maxLines="1"
-                    android:digits="@string/edittext_digits_int"
-                    android:textColor="@color/color_FFFFFF_DE000000"
-                    android:textSize="@dimen/textSize14sp"
-                    android:textColorHint="@color/color_C9CFD7" />
-
-            </org.cxct.sportlottery.view.boundsEditText.LoginFormFieldView>
-
-            <org.cxct.sportlottery.view.boundsEditText.LoginFormFieldView
-                android:id="@+id/et_e_mail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                app:hintText="@string/email_address"
-                app:isResponsiveIconColor="false"
-                app:iconSignifier="@drawable/ic_email_gray"
-                app:labelText="@string/e_mail"
-                app:labelTextStyle="normal"
-                app:primaryColor="@color/color_AFAFB1">
-
-                <org.cxct.sportlottery.view.boundsEditText.ExtendedEditText
-                    android:id="@+id/eet_e_mail"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
-                    android:digits="@string/edittext_digits_email"
-                    android:maxLength="50"
-                    android:maxLines="1"
-                    android:textColor="@color/color_FFFFFF_DE000000"
-                    android:textSize="@dimen/textSize14sp"
-                    android:textColorHint="@color/color_C9CFD7"/>
-
-            </org.cxct.sportlottery.view.boundsEditText.LoginFormFieldView>
                 <org.cxct.sportlottery.view.boundsEditText.LoginFormFieldView
                     android:id="@+id/et_username"
                     android:layout_width="match_parent"
@@ -149,63 +96,55 @@
                         android:textSize="@dimen/textSize14sp" />
 
                 </org.cxct.sportlottery.view.boundsEditText.LoginFormFieldView>
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/block_sms_valid_code"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:visibility="visible"
-                android:elevation="10dp">
-
                 <org.cxct.sportlottery.view.boundsEditText.LoginFormFieldView
-                    android:id="@+id/et_sms_valid_code"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/et_question"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginTop="@dimen/margin_2"
-                    app:hintText="@string/verification_code"
-                    app:iconSignifier="@drawable/ic_verfication"
+                    android:layout_marginHorizontal="20dp"
+                    app:hintText="@string/B180"
+                    app:iconSignifier="@drawable/ic_step_password"
                     app:isResponsiveIconColor="false"
-                    app:labelText="@string/verification_code"
+                    app:labelText="@string/login_password"
                     app:labelTextStyle="normal"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintRight_toLeftOf="@+id/btn_send_sms"
                     app:primaryColor="@color/color_AFAFB1">
 
                     <org.cxct.sportlottery.view.boundsEditText.ExtendedEditText
-                        android:id="@+id/eet_sms_code"
+                        android:id="@+id/eet_question"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:imeOptions="actionNext"
-                        android:inputType="number"
+                        android:inputType="text"
                         android:maxLines="1"
-                        android:maxLength="4"
                         android:textColor="@color/color_FFFFFF_DE000000"
-                        android:textSize="@dimen/textSize14sp"
-                        android:textColorHint="@color/color_C9CFD7" />
+                        android:textSize="@dimen/textSize14sp" />
+
                 </org.cxct.sportlottery.view.boundsEditText.LoginFormFieldView>
 
-                <Button
-                    android:id="@+id/btn_send_sms"
-                    android:layout_width="wrap_content"
-                    android:layout_height="44dp"
-                    android:background="@drawable/btn_send_sms"
-                    android:minHeight="32dp"
-                    android:layout_marginTop="@dimen/margin_8"
-                    android:text="@string/send"
-                    android:textAllCaps="false"
-                    android:textColor="@color/color_2b2b2b_ffffff"
-                    android:textSize="@dimen/textSize14sp"
-                    android:visibility="visible"
-                    android:enabled="false"
-                    android:alpha="0.5"
-                    app:layout_constraintEnd_toEndOf="@+id/et_sms_valid_code"
-                    app:layout_constraintTop_toTopOf="@+id/et_sms_valid_code"/>
+                <org.cxct.sportlottery.view.boundsEditText.LoginFormFieldView
+                    android:id="@+id/et_answer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    app:hintText="@string/B181"
+                    app:iconSignifier="@drawable/ic_step_password"
+                    app:isResponsiveIconColor="false"
+                    app:labelText="@string/login_password"
+                    app:labelTextStyle="normal"
+                    app:primaryColor="@color/color_AFAFB1">
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <org.cxct.sportlottery.view.boundsEditText.ExtendedEditText
+                        android:id="@+id/eet_answer"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:enabled="false"
+                        android:imeOptions="actionNext"
+                        android:maxLines="1"
+                        android:textColor="@color/color_FFFFFF_DE000000"
+                        android:textSize="@dimen/textSize14sp" />
+
+                </org.cxct.sportlottery.view.boundsEditText.LoginFormFieldView>
+
+
             </LinearLayout>
 
             <LinearLayout
