修复密保相关bug

--- a/app/src/main/res/layout/activity_forget_ways.xml
+++ b/app/src/main/res/layout/activity_forget_ways.xml
@@ -81,7 +81,7 @@
             android:layout_height="50dp"
             android:layout_marginBottom="@dimen/margin_12"
             android:background="@drawable/bg_blue_radius_8"
-            android:drawableLeft="@drawable/ic_mobile_white"
+            android:drawableLeft="@drawable/ic_step_phone"
             android:paddingHorizontal="16dp"
             android:drawablePadding="8dp"
             android:textAllCaps="false"
@@ -111,7 +111,7 @@
             android:layout_height="50dp"
             android:visibility="visible"
             android:background="@drawable/bg_blue_radius_8"
-            android:drawableLeft="@drawable/ic_mobile_white"
+            android:drawableLeft="@drawable/ic_step_phone"
             android:paddingHorizontal="16dp"
             android:drawablePadding="8dp"
             android:textAllCaps="false"
