--- a/app/src/main/res/layout/activity_security_question.xml
+++ b/app/src/main/res/layout/activity_security_question.xml
@@ -100,6 +100,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
+                    android:maxLength="18"
                     android:maxLines="1"
                     android:textColor="@color/color_FFFFFF_DE000000"
                     android:textSize="@dimen/textSize14sp" />
