密保问题处理显示不换行

--- a/app/src/main/res/layout/activity_forget_password_question.xml
+++ b/app/src/main/res/layout/activity_forget_password_question.xml
@@ -113,8 +113,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:imeOptions="actionNext"
-                        android:inputType="text"
-                        android:maxLines="1"
+                        android:lineSpacingExtra="@dimen/margin_5"
                         android:textColor="@color/color_FFFFFF_DE000000"
                         android:textSize="@dimen/textSize14sp" />
 
